@@ -192,41 +192,44 @@ Usage: nano [option] +LINE <file>\n\
   {"Main: set up windows\n", 159},
   {"Main: bottom win\n", 160},
   {"Main: open file\n", 161},
-  {"I got Alt-[-%c! (%d)\n", 162},
-  {"I got Alt-%c! (%d)\n", 163},
-  {"Case Sensitive Regexp Search%s%s", 164},
-  {"Regexp Search%s%s", 165},
-  {"Case Sensitive Search%s%s", 166},
-  {"Search%s%s", 167},
-  {" (to replace)", 168},
-  {"Search Cancelled", 169},
-  {"Search Wrapped", 170},
-  {"Replaced %d occurences", 171},
-  {"Replaced 1 occurence", 172},
-  {"Replace Cancelled", 173},
-  {"Replace with [%s]", 174},
-  {"Replace with", 175},
-  {"Replace this instance?", 176},
-  {"Enter line number", 177},
-  {"Aborted", 178},
-  {"Come on, be reasonable", 179},
-  {"Only %d lines available, skipping to last line", 180},
-  {"actual_x_from_start for xplus=%d returned %d\n", 181},
-  {"input '%c' (%d)\n", 182},
-  {"New Buffer", 183},
-  {"  File: ...", 184},
-  {"Modified", 185},
-  {"Moved to (%d, %d) in edit buffer\n", 186},
-  {"current->data = \"%s\"\n", 187},
-  {"I got \"%s\"\n", 188},
-  {"Yes", 189},
-  {"All", 190},
-  {"No", 191},
-  {"do_cursorpos: linepct = %f, bytepct = %f\n", 192},
-  {"line %d of %d (%.0f%%), character %d of %d (%.0f%%)", 193},
-  {"Dumping file buffer to stderr...\n", 194},
-  {"Dumping cutbuffer to stderr...\n", 195},
-  {"Dumping a buffer to stderr...\n", 196},
+  {"I got Alt-O-%c! (%d)\n", 162},
+  {"I got Alt-[-1-%c! (%d)\n", 163},
+  {"I got Alt-[-2-%c! (%d)\n", 164},
+  {"I got Alt-[-%c! (%d)\n", 165},
+  {"I got Alt-%c! (%d)\n", 166},
+  {"Case Sensitive Regexp Search%s%s", 167},
+  {"Regexp Search%s%s", 168},
+  {"Case Sensitive Search%s%s", 169},
+  {"Search%s%s", 170},
+  {" (to replace)", 171},
+  {"Search Cancelled", 172},
+  {"Search Wrapped", 173},
+  {"Replaced %d occurences", 174},
+  {"Replaced 1 occurence", 175},
+  {"Replace Cancelled", 176},
+  {"Replace with [%s]", 177},
+  {"Replace with", 178},
+  {"Replace this instance?", 179},
+  {"Enter line number", 180},
+  {"Aborted", 181},
+  {"Come on, be reasonable", 182},
+  {"Only %d lines available, skipping to last line", 183},
+  {"actual_x_from_start for xplus=%d returned %d\n", 184},
+  {"input '%c' (%d)\n", 185},
+  {"New Buffer", 186},
+  {"  File: ...", 187},
+  {"Modified", 188},
+  {"Moved to (%d, %d) in edit buffer\n", 189},
+  {"current->data = \"%s\"\n", 190},
+  {"I got \"%s\"\n", 191},
+  {"Yes", 192},
+  {"All", 193},
+  {"No", 194},
+  {"do_cursorpos: linepct = %f, bytepct = %f\n", 195},
+  {"line %d of %d (%.0f%%), character %d of %d (%.0f%%)", 196},
+  {"Dumping file buffer to stderr...\n", 197},
+  {"Dumping cutbuffer to stderr...\n", 198},
+  {"Dumping a buffer to stderr...\n", 199},
 };
 
-int _msg_tbl_length = 196;
+int _msg_tbl_length = 199;
